--- a/package.json
+++ b/package.json
@@ -3,22 +3,43 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
     "build": "next build",
+    "dev": "next dev",
+    "lint:fix-w": "eslint src\\**\\*.{ts,tsx} --fix",
+    "lint:fix": "eslint src/**/*.{ts,tsx} --fix",
+    "lint": "next lint",
     "start": "next start",
-    "lint": "next lint"
+    "test-w": "npm-run-all --parallel test:lint-w test:tsc",
+    "test:lint-w": "eslint src\\**\\*.{ts,tsx}",
+    "test:lint": "eslint src/**/*.{ts,tsx}",
+    "test:tsc": "tsc",
+    "test": "npm-run-all --parallel test:lint test:tsc"
   },
   "dependencies": {
+    "@emotion/react": "11.9.3",
+    "@emotion/styled": "11.9.3",
+    "@mui/material": "5.9.2",
+    "@wulperstudio/cms": "^0.0.629-beta",
     "next": "12.2.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "uuid": "8.3.2"
   },
   "devDependencies": {
+    "@babel/cli": "7.16.0",
+    "@babel/core": "7.16.0",
+    "@babel/preset-env": "7.16.0",
+    "@babel/preset-react": "7.16.0",
     "@types/node": "18.7.11",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
+    "@types/uuid": "8.3.2",
+    "@typescript-eslint/eslint-plugin": "5.34.0",
+    "babel-preset-minify": "0.5.1",
     "eslint": "8.22.0",
+    "eslint-config-airbnb": "19.0.4",
     "eslint-config-next": "12.2.5",
+    "npm-run-all": "4.1.5",
     "typescript": "4.7.4"
   }
 }
