--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@emotion/react": "11.9.3",
     "@emotion/styled": "11.9.3",
+    "@emotion/server": "11.4.0",
     "@mui/material": "5.9.2",
     "@wulperstudio/cms": "^0.0.629-beta",
     "next": "12.2.5",
