--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
   },
   "dependencies": {
     "@emotion/react": "11.9.3",
-    "@emotion/styled": "11.9.3",
     "@emotion/server": "11.4.0",
+    "@emotion/styled": "11.9.3",
+    "@iconify/react": "3.2.2",
     "@mui/material": "5.9.2",
-    "@wulperstudio/cms": "^0.0.629-beta",
+    "@wulperstudio/cms": "^0.0.648-beta",
     "next": "12.2.5",
+    "next-transpile-modules": "9.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "swiper": "8.2.2",
     "uuid": "8.3.2"
   },
   "devDependencies": {
@@ -41,6 +44,6 @@
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-next": "12.2.5",
     "npm-run-all": "4.1.5",
-    "typescript": "4.7.4"
+    "typescript": "4.4.4"
   }
 }
